# KeyboardChatterFix

./: Cargo.toml
src/: main.rs
systemd/: chatter-fix.service
