[package]
name = "KeyboardChatterFix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev = { version = "0.12.1", features = ["tokio"] }
ini = "1.3.0"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "time"] }